[package]
name = "barbara"
version = "0.1.0"
authors = ["Isaac Clayton <slightknack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.14"
typetag = "0.1"
rand = "0.7"
sha3 = "0.9"
